python3-aiostem (0.3.0) unstable; urgency=low

  * Improve code coverage
  * Drop support for Debian 11
  * Drop support for python 3.9

 -- Romain Bezut <morian@xdec.net>  Sun, 28 Jan 2024 11:00:00 +0000

python3-aiostem (0.2.10) unstable; urgency=low

  * hsscan now set tor controller as active before running scans
  * Remove EXTENDED flag on SETEVENTS (deprecated by Tor)
  * Message can now take one or multiple lines as argument
  * Python tasks now have names and cancel reasons
  * Greatly improve tests and code coverage

 -- Romain Bezut <morian@xdec.net>  Sun, 21 Jan 2024 22:00:00 +0000

python3-aiostem (0.2.9) unstable; urgency=low

  * Fix typing and linting issues
  * Add support for Debian 12
  * Add support for python 3.12

 -- Romain Bezut <morian@xdec.net>  Sat,  7 Oct 2023 17:45:00 +0000

python3-aiostem (0.2.8) unstable; urgency=low

  * Fix some missing exports in StatusEvents

 -- Romain Bezut <morian@xdec.net>  Sun, 20 Nov 2022 19:00:00 +0000

python3-aiostem (0.2.7) unstable; urgency=low

  * Add compatibility with python 3.11
  * Add support for command 'DROPGUARDS'

 -- Romain Bezut <morian@xdec.net>  Tue, 25 Oct 2022 15:47:00 +0000

python3-aiostem (0.2.6) unstable; urgency=low

  * Restore compatibility with python 3.7

 -- Romain Bezut <morian@xdec.net>  Sun, 13 Apr 2022 19:45:00 +0000

python3-aiostem (0.2.5) unstable; urgency=low

  * Add support for SETCONF command

 -- Romain Bezut <morian@xdec.net>  Wed, 13 Mar 2022 20:25:10 +0000

python3-aiostem (0.2.4) unstable; urgency=low

  * Add a way to parse keyword arguments with a whole line in messages

 -- Romain Bezut <morian@xdec.net>  Sun,  6 Mar 2022 16:38:00 +0000

python3-aiostem (0.2.3) unstable; urgency=low

  * Add controller support for 'GETCONF' commands
  * Rename question to query and response to reply in the API

 -- Romain Bezut <morian@xdec.net>  Mon, 21 Feb 2022 22:36:00 +0000

python3-aiostem (0.2.2) unstable; urgency=low
